--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
           <a class="navbar-brand" href="index.html">
             <img src="images/logo_ic3.png" alt="" />
-            <span>
+            <span style="white-space: initial;">
               CÔNG CỤ LUYỆN THI - TIN HỌC QUỐC TẾ IC3 GS6
             </span>
           </a>
