--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <link rel="icon" href="images/favicon.ico" type="image/gif" />
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+
+  <!-- Font Awesome css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
@@ -54,6 +57,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="LEVEL3.html">IC3 GS6 Level 3</a>
               </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="#" onclick="modalSchool(1)">Cấp Tiểu Học</a>
+              </li> -->
+              <li class="nav-item">
+                <a class="nav-link" href="#" onclick="modalSchool(2)">Cấp THCS</a>
+              </li>
             </ul>
           </div>
         </nav>
@@ -68,18 +77,15 @@
   <div class="custom_menu-container">
     <div class="container">
       <div class="custom_menu">
-        <ul class="navbar-nav ">
+        <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link pl-0" href="index.html">Trang Chủ <span class="sr-only">(current)</span></a>
+            <a class="nav-link pl-0" href="index.html">&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-home w3-xxlarge"></i><span class="sr-only">(current)</span></a>
           </li>
+          <!-- <li class="nav-item">
+            <a style="color: #AA0C39; font-weight: bold; font-style: italic;" class="nav-link" href="#" onclick="modalSchool(1)">Cấp Tiểu Học</a>
+          </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="LEVEL1.html">IC3 GS6 Level 1 </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="LEVEL2.html">IC3 GS6 Level 2 </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="LEVEL3.html">IC3 GS6 Level 3</a>
+            <a style="color: #AA0C39; font-weight: bold; font-style: italic;" class="nav-link" href="#" onclick="modalSchool(2)">Cấp THCS</a>
           </li>
         </ul>
       </div>
@@ -143,8 +149,13 @@
   <!-- end do section -->
   
   
+  <!-- footer section -->
+  <div id="id01" class="modal">  
+  </div>
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
+  <!-- custom js -->
+  <script src="js/custom.js"></script>
 </body>
 
 </html>
