--- a/THCS/IC3GS6LEVEL2.html
+++ b/THCS/IC3GS6LEVEL2.html
@@ -37,7 +37,7 @@
             
         </h3>
         <h4>
-          Bạn hãy chọn chế độ <b><i><span style="color: #f846a5;">Luyện Tập</span></i></b> hoặc <b><i><span style="color: #f846a5;">Thi Thử</span></i></b> để ôn luyện nhé!
+          Bạn hãy chọn chế độ <b><i><span style="color: #f846a5;">Luyện Tập</span></i></b> hoặc <b><i><span style="color: #f846a5;">Bài Đánh Giá</span></i></b> để ôn luyện nhé!
         </h4>
       </div>
       <hr>
